Markdown + Frontmatter working. Check src/pages/index.html for usage example.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,5 +1,12 @@
 ---
 metatitle: default
 ---
-
+{{#markdown}}
 ## Home
+
+Testing testing
+
+testing __testing__ testing
+
+# bobloblaw
+{{/markdown}}
